syntax = "proto3";
package main;

option go_package = "github.com/gnolang/gno/tm2/pkg/amino/genproto/example/pb";

// imports
import "github.com/gnolang/gno/tm2/pkg/amino/genproto/example/submodule/types.proto";
import "google/protobuf/any.proto";

// messages
message StructA {
	sint64 FieldC = 1;
	uint32 FieldD = 2;
}
message StructB {
	sint64 FieldC = 1;
	uint32 FieldD = 2;
	submodule.StructSM FieldE = 3;
	StructA FieldF = 4;
	google.protobuf.Any FieldG = 5;
}